@@ -1,1 +1,2 @@
 DIST asl-0.1.4.tar.gz 11068628 SHA256 a8ec82e7ecc05911156ce08dd3f4c571c7dbc4d0dc30950cd8130a197d66da4f SHA512 8a4705abf37f82bb1e3ffd0ce0897e7077288436251dc3dbf9f5dbd5b606845e272ac7feb7091597982a636f8f3554e0161a664c8ea23cf4ee1ac6105b896039 WHIRLPOOL c1913cd16fe77dd6a204cc8dce481ad4dbccafca57d2f002dcadc8f198cdef44ca5dd220a88c3d1b1e3a5d83d3aa51c03ace74b59a6b7c0339908bead6605535
+DIST asl-0.1.5.tar.gz 11109430 SHA256 c90be05a6f0b5c7bf12a9630355838e86edf8e2199a238b44b042147d85dfb18 SHA512 97b1a24e200bac1949999a6d3fcf7e9b391b9326abb34ab88acd9ed167e40e613ffabda971db70bfc208e19987c194ddbcc6ecdb4090c02b40c44e3cf1ccd8f6 WHIRLPOOL 2f7a02a53a5c8bb80b49cba8c446bad5492fc167bbc05385db13e52388ddc5694ad8a8699398b2156f5b5dd974bafa41feb595ae33163d77db3b59c0d40c66aa
